--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<cucumber.version>4.2.6</cucumber.version>
 		<selenium.version>3.4.0</selenium.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<cucumber.reporting.version>3.12.0</cucumber.reporting.version>
 	</properties>
 
 	<dependencies>
@@ -45,11 +46,17 @@
 			<artifactId>javafaker</artifactId>
 			<version>0.16</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.masterthought</groupId>
+			<artifactId>cucumber-reporting</artifactId>
+			<version>${cucumber.reporting.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -58,36 +65,42 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.5.1</version>
 				<configuration>
-					<encoding>UTF-8</encoding>
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-
 			<plugin>
-					<groupId>net.masterthought</groupId>
-					<artifactId>maven-cucumber-reporting</artifactId>
-					<version>3.15.0</version>
-					<executions>
-						<execution>
-							<id>execution</id>
-							<phase>verify</phase>
-							<goals>
-								<goal>generate</goal>
-							</goals>
-							<configuration>
-								<projectName>test-verity</projectName>
-								<outpuDirectory>${project.build.directory}/cucumber-jvm-reports</outpuDirectory>
-								<cucumberDirectory>${project.build.directory}/cucumber.json</cucumberDirectory>
-								<skippedFails>true</skippedFails>
-								<enableFlahsCharts>true</enableFlahsCharts>
-								<buildNumber>1</buildNumber>
-							</configuration>
-						</execution>
-					</executions>
-					
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>net.masterthought</groupId>
+				<artifactId>maven-cucumber-reporting</artifactId>
+				<version>3.14.0</version>
+				<executions>
+					<execution>
+						<id>execution</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<projectName>${project.name}</projectName>
+							<outpuDirectory>${project.build.directory}/cucumber-reports</outpuDirectory>
+							<jsonFiles>
+								<param>${project.build.directory}/cucumber.json</param>
+							</jsonFiles>
+							<parallelTesting>false</parallelTesting>
+						</configuration>
+					</execution>
+				</executions>
+
 
 			</plugin>
 		</plugins>
